--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>MainQuest</title>
   <meta charset="utf-8">
+    <meta name="description" content="MainQuest Produções - Soluções AudioVisuais" />
+    <meta name="keywords" content="Soluções Audiovisuais, Vídeo, Porto Alegre, Produção de Vídeo em Porto Alegre" />
   <meta property="fb:admins" content="713396818" />
     <meta property="og:url" content="mainq.com.br">
     <meta property="og:title" content="MainQuest Produções">
