--- a/index.html
+++ b/index.html
@@ -1,3 +1,82 @@
-ola
-fdmglkdfmg
-nonsense
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <title>MainQuest</title>
+  <meta charset="utf-8">
+    <meta name="description" content="MainQuest Produções - Soluções AudioVisuais" />
+    <meta name="keywords" content="Soluções Audiovisuais, Vídeo, Porto Alegre, Produção de Vídeo em Porto Alegre" />
+  <meta property="fb:admins" content="713396818" />
+    <meta property="og:url" content="mainq.com.br">
+    <meta property="og:title" content="MainQuest Produções">
+    <meta property="og:image" content="http://www.mainq.com.br/img/MQLogo.png">
+    <meta property="og:description" content="MainQuest - Soluções AudioVisuais">
+    
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="assets/img/favicon.ico">  
+  <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body>
+
+<div class="container">
+    <object type="image/svg+xml" data="assets/img/MqConst.svg"></object>
+    <object type="image/svg+xml" data="assets/img/MQlettering.svg"></object>
+    <h2>Soluções Audiovisuais</h2>
+</div>
+    <hr>
+    <h3>Site em Construção</h3>
+    <hr>
+<div class="footer">
+    <ul class="contact">
+        <li>
+            <a class="svg_link" href="malito:contato@mainq.com.br">
+                <svg version="1.1" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 100 80.2" style="enable-background:new 0 0 100 80.2;" xml:space="preserve">
+                    <g>
+		              <path d="M1.1,27.3c12.8,9,25.2,17.6,37.6,26.3c7.6,5.3,15.1,5.3,22.7,0c12.4-8.7,24.8-17.3,37.4-26.1
+			c0.1,0.5,0.2,1,0.2,1.5c0,13.4,0,26.8,0,40.3c0,6-3.4,9.3-9.4,9.3c-26.5,0-53,0-79.5,0c-5.2,0-8.9-3.2-9-8.2
+			C1,56.1,1.1,41.9,1.1,27.3z"/>
+		              <path d="M49.8,1.6c12.8,0,25.7,0,38.5,0c9,0,13.3,6.5,9.2,14.5c-1.7,3.4-4.6,6.6-7.7,8.8
+			C79.6,32.6,69,39.8,58.4,47.1c-6.8,4.7-10.1,4.6-16.8-0.1c-10.4-7.2-21-14.4-31.2-21.9C7.4,23,4.9,20,2.8,17
+			C0.3,13.6,0.4,9.5,2.4,5.7c1.9-3.6,5.3-4.2,9-4.1C24.2,1.7,37,1.6,49.8,1.6z"/>
+                    </g>
+                </svg>
+                <p>contato@mainq.com.br</p>
+            </a>
+        </li>
+        <li>
+            <a class="svg_link" href="tel:5131261337">
+                <svg version="1.1" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+<g>
+<path d="M99.7,81.8c-0.1,0.1-0.2,0.1-0.2,0.2c-1.3,10.5-9.1,14.3-17.8,16.9c-5.6,1.7-11,0.5-16.4-1.1
+	c-23.8-7.1-40.9-22.7-54.2-42.9C5.9,47,3,37.9,0.9,28.7c-0.1-0.4-0.3-0.8-0.4-1.2c0-2,0-4,0-6c1.2-4.8,3-9.4,5.7-13.6
+	c3.6-5.7,9.3-6.8,15.3-7.2c1-0.1,2.5,1.2,3.2,2.3c2.3,3.8,4.4,7.8,6.6,11.7c1.3,2.2,2.7,4.4,4.1,6.5c1.7,2.8,1.7,4.3-0.7,6.6
+	c-2.4,2.4-5.1,4.4-7.7,6.7c-3.8,3.4-3.8,4.4-1.3,8.9C33,57.2,43.6,67.6,57.3,74.9c3.9,2.1,5.2,2.1,8.2-1.2c2.3-2.5,4.3-5.3,6.7-7.7
+	c2.7-2.8,4.1-2.8,7.4-0.8c5.3,3.2,10.8,6.2,16.1,9.3c1.4,0.8,2.7,1.9,4,2.9C99.7,78.9,99.7,80.4,99.7,81.8z"/>
+</g>
+                </svg>
+            <p>(51) 3126.1337</p>
+            </a>
+        </li> 
+    </ul>
+    <ul class="social">
+        <li>
+            <a href="https://www.facebook.com/pages/MainQuest-Produ%C3%A7%C3%B5es/1401283936836291" target="_blank" class="svg_link">
+                <svg version="1.1" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+       <g>
+<path d="M65.7,99.2c0-12.4,0-24.3,0-36.8c4.3,0,8.5-0.1,12.7,0c2.8,0.1,3.8-0.9,3.7-3.7
+	c-0.2-4.2,0-8.5,0-13.1c-5.7,0-10.8,0-16.5,0c0-2.5-0.1-4.5,0-6.6c0.2-2.9,1.7-4.4,4.7-4.4c3.8,0.1,7.5,0,11.8,0
+	c0-5.1,0.2-9.7-0.1-14.2c-0.1-0.9-1.8-2.4-2.8-2.4c-4-0.3-8-0.3-11.9,0C58,18.9,50.4,27.7,50,37.6c-0.1,2.4,0,4.8,0,7.7
+	c-4,0-7.8,0-12.3,0c0,5.2-0.1,10,0.1,14.8c0,0.8,2,2,3.1,2.1c2.8,0.3,5.7,0.1,8.8,0.1c0,12.5,0,24.5,0,36.7
+	c-11.9,0-23.6,0.4-35.3-0.2C7,98.5,0.9,91.7,0.8,84c-0.3-22.6-0.3-45.2,0-67.8C1,7.8,7.7,1,16.2,0.9c22.6-0.3,45.2-0.3,67.8,0
+	c8.4,0.1,15.1,7,15.2,15.5c0.3,22.4,0.3,44.9,0,67.3c-0.1,8.3-6.6,14.9-14.7,15.4C78.4,99.6,72.3,99.2,65.7,99.2z"/>
+    </g>
+</svg>
+            </a>
+            
+        </li>
+    </ul>
+</div>
+</body>
+</html>
