--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="MainQuest Produções - Soluções AudioVisuais" />
     <meta name="keywords" content="Soluções Audiovisuais, Vídeo, Porto Alegre, Produção de Vídeo em Porto Alegre" />
   <meta property="fb:admins" content="713396818" />
-    <meta property="og:url" content="mainq.com.br">
+    <meta property="og:url" content="www.mainquest.com.br">
     <meta property="og:title" content="MainQuest Produções">
-    <meta property="og:image" content="http://www.mainq.com.br/assets/img/MQLogo.png">
+    <meta property="og:image" content="http://www.mainquest.com.br/assets/img/MQLogo.png">
     <meta property="og:description" content="MainQuest - Soluções AudioVisuais">
     
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
