--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!-- End Google Tag Manager -->
 
     <div class="container">
-        <object type="image/svg+xml" data="assets/img/MqConst.svg"></object>
+        <object type="image/svg+xml" data="assets/img/MqConst.svg">
+            <img src="assets/img/MQLogo.png" alt="MainQuest" />
+        </object>
         <object type="image/svg+xml" data="assets/img/MQlettering.svg"></object>
         <h2>Soluções Audiovisuais</h2>
     </div>
@@ -84,7 +86,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         </g>
                     </svg>
                 </a>
-
+            </li>
+            <li>
+                <a href="http://vimeo.com/mainquest" target="_blank" class="svg_link">
+                    <svg version="1.1" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 155 155" style="enable-background:new 0 0 155 155;" xml:space="preserve">
+                        <g>
+	                       <path d="M78.6,153.7c-15.3,0-30.7,0.1-46,0c-16.8-0.1-28.7-11.8-28.8-28.6c-0.2-31-0.1-62,0-93C3.8,16.3,15.6,4,31.5,3.8
+		c31.5-0.3,63-0.3,94.5,0c16.2,0.2,27.7,12.4,27.7,28.6c0.1,30.8,0.1,61.7,0,92.5c0,16.8-11.9,28.6-28.6,28.7
+		C109.6,153.8,94.1,153.7,78.6,153.7z M16.4,61.9C19,67,22.3,67.7,27,66.1c6-2,8-0.8,10.4,5.1c0.8,1.8,1.4,3.8,1.9,5.7
+		c3.5,12.5,6.8,25,10.6,37.4c5.4,17.7,15.9,21.5,30.7,10.5c24.2-17.9,37.6-43.2,45.6-71.5c3.2-11.2-3.9-18.6-15.7-17.5
+		c-13.9,1.2-23,9.4-29.1,21.5c-0.5,0.9-0.5,2-0.9,3.4c1.5,0,2.5-0.1,3.4,0c7.7,0.5,10.4,3.1,9.6,10.7c-1,9-5.3,16.7-11.1,23.5
+		c-2.6,3.1-6,2.9-8.7-0.1c-1.7-1.9-3.4-4.3-4.1-6.7c-1.4-5.1-2.1-10.4-3.1-15.6C65.1,65,64.3,57.4,62.3,50c-3-11.3-11-14.2-21-8.3
+		c-1.1,0.7-2.3,1.4-3.3,2.3C30.9,49.9,23.7,55.9,16.4,61.9z"/>
+                        </g>
+                    </svg>
+                </a>
             </li>
         </ul>
     </div>
