--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <object type="image/svg+xml" data="assets/img/MqConst.svg">
             <img src="assets/img/MQLogo.png" alt="MainQuest" />
         </object>
-        <object type="image/svg+xml" data="assets/img/MQlettering.svg"></object>
+        <object type="image/svg+xml" data="assets/img/MQlettering.svg">
+            <h1>MainQuest</h1>
+        </object>
         <h2>Soluções Audiovisuais</h2>
     </div>
     <hr>
