--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta charset="utf-8">
     <meta name="description" content="MainQuest Produções - Soluções AudioVisuais" />
     <meta name="keywords" content="Soluções Audiovisuais, Vídeo, Porto Alegre, Produção de Vídeo em Porto Alegre" />
-  <meta property="fb:admins" content="713396818" />
-    <meta property="og:url" content="www.mainquest.com.br">
-    <meta property="og:title" content="MainQuest Produções">
-    <meta property="og:image" content="http://www.mainquest.com.br/assets/img/MQLogo.png">
-    <meta property="og:description" content="MainQuest - Soluções AudioVisuais">
     
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="assets/img/favicon.ico">  
+  <meta property="fb:admins" content="713396818" />
+    <meta property="og:title" content="MainQuest Produções" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="MainQuest - Soluções AudioVisuais" />
+    <meta property="og:url" content="http://www.mainquest.com.br" />
+    <meta property="og:image" content="http://mainquest.com.br/assets/img/MQLogo.png" />
+    
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="assets/img/favicon.ico" />  
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
