--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 ---
 
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
+  <meta name="fragment" content="!">
+
   <meta charset="utf-8" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
