--- a/work/proj-2.html
+++ b/work/proj-2.html
@@ -2,14 +2,17 @@
 permalink: /work/proj-2.html
 ---
 
-<div class="video-wrap" id="widescreen">
-  <iframe src="https://player.vimeo.com/video/134695135" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div itemprop="video" itemscope itemtype="http://schema.org/VideoObject">
+  <meta itemprop="name" content="MainQuest - Portfolio Eventos" />
+  <meta itemprop="thumbnailUrl" content="assets/imgs/work/proj-2/thumb.png" />
+  <meta itemprop="embedURL" content="https://player.vimeo.com/video/134695135" />
+  <meta itemprop="uploadDate" content="2015-07-28" />
+  <div class="video-wrap" id="widescreen">
+    <iframe src="https://player.vimeo.com/video/134695135" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+  <p itemprop="description">Esse vídeo é uma compilação com trechos de <strong>gravações de eventos</strong>. Entre os clientes estão a Mezanino Produções, o DJ Luciano Corrêa e a estilista Baby Steinberg.</p>
+  <p>Os vídeos completos do nosso portfólio estão no nosso canal no <a href="http://vimeo.com/mainquest" target="_blank">Vímeo!</a></p>
 </div>
-
-<p>Esse vídeo é uma compilação com trechos de <strong>gravações de eventos</strong>. Entre os clientes estão a Mezanino Produções, o DJ Luciano Corrêa e a estilista Baby Steinberg.</p>
-
-<p>Os vídeos completos do nosso portfólio estão no nosso canal no <a href="http://vimeo.com/mainquest" target="_blank">Vímeo!</a></p>
-
 <p>Aqui abaixo estão também algumas <strong>fotos de cobertura</strong> que fizemos dos <strong>eventos</strong>: Porto Verão Alegre e Mostra do Teatro Gaúcho.</p>
 <div class="gal-container">
   {% for item in site.data.portGal %}
