--- a/work/proj-3.html
+++ b/work/proj-3.html
@@ -1,7 +1,11 @@
-<div class="video-wrap" id="widescreen">
-  <iframe src="https://player.vimeo.com/video/134974404" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div itemprop="video" itemscope itemtype="http://schema.org/VideoObject">
+  <meta itemprop="name" content="MainQuest - Portfolio Diversos" />
+  <meta itemprop="thumbnailUrl" content="assets/imgs/work/proj-3/thumb.png" />
+  <meta itemprop="embedURL" content="https://player.vimeo.com/video/134974404" />
+  <meta itemprop="uploadDate" content="2015-07-30" />
+  <div class="video-wrap" id="widescreen">
+    <iframe src="https://player.vimeo.com/video/134974404" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+  <p itemprop="description">Esse vídeo é uma compilação de diferentes tipos de trabalhos audiovisuais. Entre eles, uma <strong>animação personalizada</strong> especialmente desenvolvida para passar no telão durante os shows da Discografia do Pop Rock Gaúcho 2015.</p>
+  <p>Os vídeos completos do nosso portfólio estão no nosso canal no  <a href="http://vimeo.com/mainquest" target="_blank">Vímeo!</a></p>
 </div>
-
-<p>Esse vídeo é uma compilação de diferentes tipos de trabalhos audiovisuais. Entre eles, uma <strong>animação personalizada</strong> especialmente desenvolvida para passar no telão durante os shows da Discografia do Pop Rock Gaúcho 2015.</p>
-
-<p>Os vídeos completos do nosso portfólio estão no nosso canal no  <a href="http://vimeo.com/mainquest" target="_blank">Vímeo!</a></p>
