--- a/work/proj-1.html
+++ b/work/proj-1.html
@@ -1,7 +1,12 @@
-<div class="video-wrap" id="widescreen">
-  <iframe src="https://player.vimeo.com/video/134694935" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div itemprop="video" itemscope itemtype="http://schema.org/VideoObject">
+  <meta itemprop="name" content="MainQuest - Portfolio Vinhetas" />
+  <meta itemprop="thumbnailUrl" content="assets/imgs/work/proj-1/thumb.png" />
+  <meta itemprop="embedURL" content="https://player.vimeo.com/video/134694935" />
+  <meta itemprop="uploadDate" content="2015-07-28" />
+  <div class="video-wrap" id="widescreen">
+    <iframe src="https://player.vimeo.com/video/134694935" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+  <p itemprop="description">Esse vídeo é uma compilação de <strong>vinhetas</strong> animadas. Entre os clientes estão a Bisol Imóveis e o evento Discografia do Pop Rock Gaúcho 2015.</p>
+  <br>
+  <p>Os vídeos completos do nosso portfólio estão no nosso canal no <a href="http://vimeo.com/mainquest" target="_blank">Vímeo!</a></p>
 </div>
-
-<p>Esse vídeo é uma compilação de <strong>vinhetas</strong> animadas. Entre os clientes estão a Bisol Imóveis e o evento Discografia do Pop Rock Gaúcho 2015.</p>
-<br>
-<p>Os vídeos completos do nosso portfólio estão no nosso canal no <a href="http://vimeo.com/mainquest" target="_blank">Vímeo!</a></p>
